test/src/e2e_vm_tests/test_programs/should_pass/language/raw_ptr/vec_ret/src/main.sw
script;

fn main() -> Vec<u64> {
    let vec = Vec::new();
    vec.push(124);
    vec
}
