test/src/e2e_vm_tests/test_programs/should_fail/raw_ptr/vec_ret/src/main.sw
script;

use std::vec::Vec;

fn main() -> Vec<u64> {
    let vec = ~Vec::new();
    vec
}
